added getting all chats details
